Remove figure x.y and table x.y from all pages

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-00-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-00-array.mdx
@@ -9,7 +9,7 @@ import imgArray from './images/mmv-array.png';
 
 <a id="FigureArray"></a>
 <img src={imgArray.src} alt="Arrays allow you to store multiple values in a variable" width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Arrays allow you to store multiple values in a variable</div><br/>
+<div class="caption">Arrays allow you to store multiple values in a variable</div><br/>
 
 :::note
 
@@ -49,7 +49,7 @@ import imgArrayContiguousMemory from './images/mmv-array-contiguous-memory.png';
 
 <a id="FigureArrayContiguousMemory"></a>
 <img src={imgArrayContiguousMemory.src} alt="Arrays occupy a contiguous area of memory, with elements next to each other in memory" width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Arrays occupy a contiguous area of memory, with elements next to each other in memory</div><br/>
+<div class="caption">Arrays occupy a contiguous area of memory, with elements next to each other in memory</div><br/>
 
 :::note
 
