--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-02-assign-element.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-02-assign-element.mdx
@@ -11,7 +11,7 @@ import imgArrayAssignmentStatement from './images/mmv-array-assignment-statement
 
 <a id="FigureArrayAssignmentStatement"></a>
 <img src={imgArrayAssignmentStatement.src} alt="Assigning a value to an element of the array" width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Assigning a value to an element of the array</div><br/>
+<div class="caption">Assigning a value to an element of the array</div><br/>
 
 :::note
 
