--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-03-expressions-with-arrays.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-03-expressions-with-arrays.mdx
@@ -11,7 +11,7 @@ import imgArrayReadValueExpression from './images/mmv-array-read-value-expressio
 
 <a id="FigureArrayReadValueExpression"></a>
 <img src={imgArrayReadValueExpression.src} alt="Expressions for reading values from arrays" width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Expressions for reading values from arrays</div><br/>
+<div class="caption">Expressions for reading values from arrays</div><br/>
 
 :::note
 
