--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-05-array-params.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-05-array-params.mdx
@@ -10,7 +10,7 @@ You should avoid passing arrays by value, and instead pass them by reference. Wh
 
 <a id="FigureArrayPassByRef"></a>
 ![Arrays should always be passed by reference](./images/array-parameter-idea.png)
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Arrays should always be passed by reference</div><br/>
+<div class="caption">Arrays should always be passed by reference</div><br/>
 
 :::note
 
