--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-00-designing-statistics-calculator.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-00-designing-statistics-calculator.mdx
@@ -12,7 +12,7 @@ title: Statistics Calculator
 | **Name** | *Statistics Calculator* |
 | **Description** | Reads values from the user and calculates a range of statistics that are output to the Terminal. Statistics output include **mean**, **maximum**, and **sum**.|
 
-<div class="caption"><span class="caption-figure-nbr">Table x.y: </span>Description of the <code>Statistics Calculator</code>program</div><br/>
+<div class="caption">Description of the <code>Statistics Calculator</code>program</div><br/>
 
 As before, the process to design and implement this program will follow a number of steps:
 
