--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-01-stats-design.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-01-stats-design.mdx
@@ -34,7 +34,7 @@ import imgProgramInputOutput from './images/program-input-output.png';
 
 <a id="FigureProgramInputOutput"></a>
 <img src={imgProgramInputOutput.src} alt="Programs convert Inputs to Outputs" width="75%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Programs convert Inputs to Outputs</div><br/>
+<div class="caption">Programs convert Inputs to Outputs</div><br/>
 
 At the start of the program the user will need to enter the values that will be stored in the array. This task can be coded in a `Populate Array` procedure. This will get the user to enter the values into the array. We can achieve this by getting the user to enter *each value* in the array.
 
@@ -49,7 +49,7 @@ import imgFlowChartReadDouble from './images/flowchart-read-double.png';
 
 <a id="FigureFlowchartReadDouble"></a>
 <img src={imgFlowChartReadDouble.src} alt="Flowchart showing the process for reading a double" width="80%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Flowchart showing the process for reading a double</div><br/>
+<div class="caption">Flowchart showing the process for reading a double</div><br/>
 
 ## Populating the array
 
@@ -66,7 +66,7 @@ import imgFlowChartPopulateArray from './images/flowchart-populate-array.png';
 
 <a id="FigureFlowchartPopulateArray"></a>
 <img src={imgFlowChartPopulateArray.src} alt="Flowchart showing the process for Populate Array" width="80%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Flowchart showing the process for `Populate Array`</div><br/>
+<div class="caption">Flowchart showing the process for `Populate Array`</div><br/>
 
 ## Where is the data stored?
 
@@ -82,7 +82,7 @@ import imgStructureChartStatisticsCalculator from './images/structurechart-stati
 
 <a id="FigureStructureChartStatisticsCalculator"></a>
 <img src={imgStructureChartStatisticsCalculator.src} alt="Structure Chart showing the structure of the Statistics Calculator program" width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Structure Chart showing the structure of the `Statistics Calculator` program</div><br/>
+<div class="caption">Structure Chart showing the structure of the `Statistics Calculator` program</div><br/>
 
 :::note
 
