--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-03-calculating-sum.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-03-calculating-sum.mdx
@@ -30,7 +30,7 @@ Steps
 3.      total is assigned total + the value of the ith element of data
 4. Return the result total.
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Pseudocode for Sum</div>
+<div class="caption">Pseudocode for Sum</div>
 
 There are three key things to notice about the pseudocode in [Listing x.y](#ListingSum). Firstly the [for loop](../../../../part-1-instructions/3-control-flow/1-concepts/04-3-for-loop) is used to repeat the loop once for each element in the array. Second, the `i` variable moves through the valid indexes of the array. Finally, the `total` variable is used to keep the running total throughout the code.
 
