--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-05-calculating-maximum.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-05-calculating-maximum.mdx
@@ -39,6 +39,6 @@ Steps
     4.          max is assigned the value of the i-th element of the array
     5. Return the result, max
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Pseudocode for Maximum</div>
+<div class="caption">Pseudocode for Maximum</div>
 
 Notice how the idea is the same as with the earlier functions. You need to think of the logic in a way that can work by processing each element of the array one at time. Additional variables, such as the sum or max, can be added to help you remember values as you go step through the elements in the array.
