--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/1-concepts/03-1-alloc-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/1-concepts/03-1-alloc-array.mdx
@@ -105,7 +105,7 @@ Storing single values on the heap can be useful, but often you want to be able t
 <a id="FigureArrayAllocateMemory"></a>
 
 ![Figure x.y: You can ask to be allocated a number of values](./images/array-allocate-memory.png "You can ask to be allocated a number of values")
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>You can ask to be allocated a number of values</div><br/>
+<div class="caption">You can ask to be allocated a number of values</div><br/>
 
 ## In C/C++
 
