--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/1-concepts/03-4-realloc.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/1-concepts/03-4-realloc.mdx
@@ -273,7 +273,7 @@ The advantage of dynamic memory allocation is that you can change your allocatio
 <a id="FigureArraySizeChange"></a>
 
 ![Figure x.y: You can change the size of the allocation, growing or shrinking the number of element](./images/array-size-change.png "You can change the size of the allocation, growing or shrinking the number of element")
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>You can change the size of the allocation, growing or shrinking the number of element</div><br/>
+<div class="caption">You can change the size of the allocation, growing or shrinking the number of element</div><br/>
 
 :::note
 
@@ -347,7 +347,7 @@ int main()
     return 0;
 }
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Example calls to <code>realloc</code></div>
+<div class="caption">Example calls to <code>realloc</code></div>
 
 Notice how we use an if statement to check if the realloc worked. If it did, we update the pointer, otherwise it retains its original value.
 
