--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-01-persisting-data.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-01-persisting-data.mdx
@@ -12,7 +12,7 @@ import imgIOsaveDataToFile from './images/io-saving-data-to-a-file.png';
 
 <a id="FigureIOsaveDataToFile"></a>
 <img src={imgIOsaveDataToFile.src} alt="When a program ends its data is gone, unless you save it to file" width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>When a program ends its data is gone, unless you save it to file</div><br/>
+<div class="caption">When a program ends its data is gone, unless you save it to file</div><br/>
 
 :::note
 
