--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-02-interacting-with-files.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-02-interacting-with-files.mdx
@@ -12,7 +12,7 @@ import imgIOfileIO from './images/io-file-io.png';
 
 <a id="FigureIOfileIO"></a>
 <img src={imgIOfileIO.src} alt="File operations include the ability to open, read, write, and close files" width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>File operations include the ability to open, read, write, and close files</div><br/>
+<div class="caption">File operations include the ability to open, read, write, and close files</div><br/>
 
 :::note
 - Programming languages will provide functions and procedures to: 
