--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-03-file-formats.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-03-file-formats.mdx
@@ -11,7 +11,7 @@ import imgIOfileFormats from './images/io-file-formats.png';
 
 <a id="FigureIOfileFormats"></a>
 <img src={imgIOfileFormats.src} alt="Files can store textual or binary data" width="80%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Files can store <em>textual</em> or <em>binary</em> data</div><br/>
+<div class="caption">Files can store <em>textual</em> or <em>binary</em> data</div><br/>
 
 :::note
 
