--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-04-file-structures.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-04-file-structures.mdx
@@ -17,7 +17,7 @@ import imgIOfileStructures from './images/io-file-structures.png';
 
 <a id="FigureIOfileStructures"></a>
 <img src={imgIOfileStructures.src} alt="You need to structure data within the file to make it possible to read back successfully." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>You need to structure data within the file to make it possible to read back successfully.</div><br/>
+<div class="caption">You need to structure data within the file to make it possible to read back successfully.</div><br/>
 
 :::note
 - [Figure x.y](#FigureIOfileStructures) shows different ways of structuring a variable number of 'row' values within a file.
