--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-05-other-devices.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-05-other-devices.mdx
@@ -13,7 +13,7 @@ import imgIOotherDevices from './images/io-other-devices.png';
 
 <a id="FigureIOotherDevices"></a>
 <img src={imgIOotherDevices.src} alt="Writing to other devices also follows similar patterns" width="80%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Writing to other devices also follows similar patterns</div><br/>
+<div class="caption">Writing to other devices also follows similar patterns</div><br/>
 
 :::note
 
