--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/02-02-closing-a-file.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/02-02-closing-a-file.mdx
@@ -17,7 +17,7 @@ Once you have opened a file it is important that you also close it. The `fclose`
 | **Returns** | `int`: Returns 0 when it is successfully closed. |
 | **Parameter** | `stream`: The file to close. |
 
-<div class="caption"><span class="caption-figure-nbr">Table x.y: </span>Details of the <code>fclose</code> function</div><br/>
+<div class="caption">Details of the <code>fclose</code> function</div><br/>
 
 :::note
 
