--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/02-03-writing-text-to-a-file.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/02-03-writing-text-to-a-file.mdx
@@ -16,7 +16,7 @@ You can use`fprintf` to write data to a `FILE` that has been opened with write c
 | **Returns** | `int`: The number of characters written to the `destination` by `fprintf`. |
 | **Parameter** | `destination`: The `FILE` to write output into.<br/><br/>`format`: The text that is to be written to the file. This text may contain format tags to include other values. This is the same as <code>printf</code>, see Figure ?? for the syntax of the format tag.<br/><br/>`...`: Optional values, must have at least as many values as format tags.|
 
-<div class="caption"><span class="caption-figure-nbr">Table x.y: </span>Parameters that must be passed to `fprintf`</div><br/>
+<div class="caption">Parameters that must be passed to `fprintf`</div><br/>
 
 :::note
 - This will write the data as text to the file.
