--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/02-04-reading-text-from-a-file.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/02-04-reading-text-from-a-file.mdx
@@ -15,7 +15,7 @@ Reading text data from a file is similar to reading data from the Terminal or fr
 | **Returns**            | `int`: The number of values read by `fscanf`.                                                                                                                                                                                                                                                                                                                     |
 | **Parameter**          | `source`: The file from which the input is read.<br/><br/>`format`: The The format specifier describing what is to be read from the Terminal. This is the same as with `scanf`, see [Table 2.4](#TableFscanf).<br/><br/>`...`: The variables into which the values will be read. There must be at least as many variables as format tags in the format specifier. |
 
-<div class="caption"><span class="caption-figure-nbr">Table x.y: </span>Parameters that must be passed to `fscanf`</div><br/>
+<div class="caption">Parameters that must be passed to `fscanf`</div><br/>
 
 :::note
 
@@ -52,4 +52,4 @@ int main()
 }
 ```
 
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Example code that demonstrates writing a value and reading it back from a text file</div>
+<div class="caption">Example code that demonstrates writing a value and reading it back from a text file</div>
