--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/02-05-writing-binary-data-to-file.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/02-05-writing-binary-data-to-file.mdx
@@ -15,7 +15,7 @@ The `fwrite` function allows you to write binary data to a file. This requires y
 | **Returns** | `int`: The number of elements written to the`destination` by `fwrite`. If this does not equal the `count` parameter it indicates an error occurred writing the data to the file. |
 | **Parameter** | `ptr`: A pointer to the data to be saved to the file.<br/><br/>`size`: The size of each element to be saved<br/><br/>`count`: The number of elements to be saved to the file.<br/><br/>`destination`: The `FILE` to write the output to<br/><br/>|
 
-<div class="caption"><span class="caption-figure-nbr">Table x.y: </span>Parameters that must be passed to `fwrite`</div><br/>
+<div class="caption">Parameters that must be passed to `fwrite`</div><br/>
 
 :::note
 - The file must be opened with write permissions. 
@@ -51,4 +51,4 @@ int main()
 
 
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Example code that writing an array of double values to a binary file.</div>
+<div class="caption">Example code that writing an array of double values to a binary file.</div>
