--- a/src/content/docs/book/part-3-programs-as-concepts/4-collections/1-concepts/25-syntax-guide.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/4-collections/1-concepts/25-syntax-guide.mdx
@@ -25,7 +25,7 @@ import imgArrayDeclarationInitialization from './images/arrays-declaration-initi
 
 <a id="FigureArrayDeclarationInitialization"></a>
 <img src={imgArrayDeclarationInitialization.src} alt="This diagram shows the syntax for an array declaration and initialisation in C#." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for an array declaration and initialisation in C#.</div><br/>
+<div class="caption">This diagram shows the syntax for an array declaration and initialisation in C#.</div><br/>
 
 :::note
 Note that values or expressions must all be of a type which matches the type of array. Above, our int array of temperatures stores 22, 23, 24 (all integers).
@@ -50,7 +50,7 @@ import imgArrayExpression from './images/arrays-expression.png';
 
 <a id="FigureArrayExpression"></a>
 <img src={imgArrayExpression.src} alt="This diagram shows the syntax for an array expression in C#." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for an array expression in C#.</div><br/>
+<div class="caption">This diagram shows the syntax for an array expression in C#.</div><br/>
 
 ## For Loops
 
@@ -59,7 +59,7 @@ import imgArrayForLoop from './images/arrays-for-loops.png';
 
 <a id="FigureArrayForLoop"></a>
 <img src={imgArrayForLoop.src} alt="This diagram shows the syntax for a for loop in C#." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for a for loop in C#.</div><br/>
+<div class="caption">This diagram shows the syntax for a for loop in C#.</div><br/>
 
 The for loop is most often constructed with the following components which are separated by a semicolon ; in the brackets:
 
@@ -116,7 +116,7 @@ import imgArrayForEachLoop from './images/arrays-foreach-loops.png';
 
 <a id="FigureArrayForEachLoop"></a>
 <img src={imgArrayForEachLoop.src} alt="This diagram shows the syntax for a foreach loop in C#." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for a foreach loop in C#.</div><br/>
+<div class="caption">This diagram shows the syntax for a foreach loop in C#.</div><br/>
 
 ```cs
 int[] temperatures = { 22, 22, 23, 24, 24, 22 };
