--- a/src/content/docs/book/part-3-programs-as-concepts/5-collaboration-encapsulation/1-concepts/16-syntax-guide.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/5-collaboration-encapsulation/1-concepts/16-syntax-guide.mdx
@@ -96,7 +96,7 @@ import imgClassDeclaration from './images/sit771-class-declaration.png';
 
 <a id="FigureClassDeclaration"></a>
 <img src={imgClassDeclaration.src} alt="This diagram shows the syntax for declaring a class with instance members." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for declaring a class with instance members.</div><br/>
+<div class="caption">This diagram shows the syntax for declaring a class with instance members.</div><br/>
 
 The following code snippet is of a `Shape` class with 2 private instance members, an `int x`, `int y`, as well as a `public void Draw()` method. This means that any objects of type Shape will have their own x and y integer variables, and a Draw method which they can invoke.
 
@@ -122,7 +122,7 @@ import imgConstructor from './images/sit771-constructors.png';
 
 <a id="FigureConstructor"></a>
 <img src={imgConstructor.src} alt="This diagram shows the syntax for declaring a constructor." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for declaring a constructor.</div><br/>
+<div class="caption">This diagram shows the syntax for declaring a constructor.</div><br/>
 
 ## Fields
 
@@ -133,7 +133,7 @@ import imgFields from './images/sit771-fields.png';
 
 <a id="FigureFields"></a>
 <img src={imgFields.src} alt="This diagram shows the syntax for fields." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for fields.</div><br/>
+<div class="caption">This diagram shows the syntax for fields.</div><br/>
 
 
 Just like instance methods are "attached" to each object of a given class, *fields* are variables associated with a given class (unless they're static). Each object has it's own memory allocation for each instance field.
@@ -168,7 +168,7 @@ import imgProperties from './images/sit771-properties.png';
 
 <a id="FigureProperties"></a>
 <img src={imgProperties.src} alt="This diagram shows the syntax for properties." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for properties.</div><br/>
+<div class="caption">This diagram shows the syntax for properties.</div><br/>
 
 ```cs
 public class Shape()
@@ -236,7 +236,7 @@ import imgDeclaringVariables from './images/sit771-variable-declaration.png';
 
 <a id="FigureDeclaringVariables"></a>
 <img src={imgDeclaringVariables.src} alt="This diagram shows the syntax for declaring variables in our code." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for declaring variables in our code.</div><br/>
+<div class="caption">This diagram shows the syntax for declaring variables in our code.</div><br/>
 
 ## Return statement
 
@@ -249,7 +249,7 @@ import imgReturnStatement from './images/sit771-return-statement.png';
 
 <a id="FigureReturnStatement"></a>
 <img src={imgReturnStatement.src} alt="This diagram shows the syntax for returning in our code." width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for returning in our code.</div><br/>
+<div class="caption">This diagram shows the syntax for returning in our code.</div><br/>
 
 There are a few things to note when returning: * Void methods don't return a value, just use the `return1 statement: ie return;. 
 
