--- a/src/content/docs/book/part-3-programs-as-concepts/8-Interfaces-abstract-classes/1-concepts/12-syntax-guide.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/8-Interfaces-abstract-classes/1-concepts/12-syntax-guide.mdx
@@ -9,7 +9,7 @@ import imgLambdaExpressions from './images/lambda-expressions.png';
 
 <a id="FigureLambdaExpressions"></a>
 <img src={imgLambdaExpressions.src} alt="This diagram shows the syntax for lambda expressions in C#" width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>This diagram shows the syntax for lambda expressions in C#</div><br/>
+<div class="caption">This diagram shows the syntax for lambda expressions in C#</div><br/>
 
 The first example uses syntax which supports multiple lambda arguments 
 
