--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/1-concepts/03-02-enum.md
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/1-concepts/03-02-enum.md
@@ -10,7 +10,7 @@ An Enumeration allows you to create a type where the value in these variables is
 <a id="FigureCustomTypeEnum"></a>
 
 ![Figure x.y: An Enumeration allows you to define related constants](./images/custom-type-enum.png "An Enumeration allows you to define related constantss")
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>An Enumeration allows you to define related constants</div><br/>
+<div class="caption">An Enumeration allows you to define related constants</div><br/>
 
 :::note
 
