--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/01-for-loop.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/01-for-loop.mdx
@@ -11,7 +11,7 @@ import imgArrayForLoop from './images/mmv-array-for-loop.png';
 
 <a id="FigureArrayForLoop"></a>
 <img src={imgArrayForLoop.src} alt="The for loop can be used to loop through the elements of an array" width="100%" />
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>The for loop can be used to loop through the elements of an array</div><br/>
+<div class="caption">The for loop can be used to loop through the elements of an array</div><br/>
 
 :::note
 
