--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-04-calculating-mean.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-04-calculating-mean.mdx
@@ -22,6 +22,6 @@ Parameters:
 Steps
     1. Return the result, Sum(data, size) / size
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Pseudocode for Mean</div>
+<div class="caption">Pseudocode for Mean</div>
 
 This gives us a plan for the mean, and a decision we need to make around storing the numbers in a basic array or in a struct that contains the array and its current number of stored elements.
