--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/1-concepts/03-0-allocating-memory.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/1-concepts/03-0-allocating-memory.mdx
@@ -156,7 +156,7 @@ With dynamic memory management, one of the tasks you can perform is to request s
 <a id="FigureAllocatingMemory"></a>
 
 ![Figure x.y: When requesting a memory allocation you need to specify the size you want](./images/allocating-memory.png "When requesting a memory allocation you need to specify the size you want")
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>When requesting a memory allocation you need to specify the size you want</div><br/>
+<div class="caption">When requesting a memory allocation you need to specify the size you want</div><br/>
 
 :::note
 
@@ -230,7 +230,7 @@ int main()
     return 0;
 }
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Example calls to <code>malloc</code></div>
+<div class="caption">Example calls to <code>malloc</code></div>
 
 :::note
 
@@ -277,7 +277,7 @@ int main()
     return 0;
 }
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Example calls to <code>calloc</code></div>
+<div class="caption">Example calls to <code>calloc</code></div>
 
 :::note
 
