--- a/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-c-file-type.mdx
+++ b/src/content/docs/book/part-2-organised-code/8-file-io/1-concepts/01-c-file-type.mdx
@@ -43,7 +43,7 @@ int main()
 }
 
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Example use of the <code>FILE</code> type to read and write text data</div>
+<div class="caption">Example use of the <code>FILE</code> type to read and write text data</div>
 
 :::note
 
