--- a/src/content/docs/book/part-3-programs-as-concepts/4-collections/1-concepts/23-debugging.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/4-collections/1-concepts/23-debugging.mdx
@@ -67,5 +67,5 @@ class Program
     }
   }
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>Using the Debugger</div>
+<div class="caption">Using the Debugger</div>
 
