--- a/src/content/docs/book/part-3-programs-as-concepts/8-Interfaces-abstract-classes/1-concepts/08-making-a-button.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/8-Interfaces-abstract-classes/1-concepts/08-making-a-button.mdx
@@ -119,4 +119,4 @@ public class Button
   }
 }
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing x.y: </span>The source code for making a button</div>
+<div class="caption">The source code for making a button</div>
