Update remainder of structuring code

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/00-2-explore-functions.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/00-2-explore-functions.mdx
@@ -120,6 +120,7 @@ We can test this out by extending our program to read in an integer. Have a go a
 #include "splashkit.h"
 
 using std::to_string;
+using std::stoi;
 
 // Add read string code here
 
