--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/01-06-compiling-and-running.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/01-06-compiling-and-running.mdx
@@ -12,4 +12,4 @@ Once you have completed the code for this program you need to test that the feat
 - Check the output message when your guess is larger than the number (you can enter a guess larger than 100).
 - Ensure that the random sequence is different each time, if it's not make sure you have seeded the random number generator.
 
-Testing is a really important part of all software projects. It is easy to have small issues that go unnoticed. Remember that testing aims to find issues, so try different things to see how they go.
+Testing is a really important part of all software projects. It is easy to have small issues that go unnoticed. Remember that testing aims to **find issues**, so try different things to see how they go. You want to break it if you can.
